# musix

./: Cargo.toml  LICENSE  README.MD
src/: arrangement.rs  audio.rs  audio_clip.rs  audio_source.rs  deligate.rs  main.rs  widgets.rs
src/controllers/: event.rs
src/widgets/: arrangement.rs  audio_clip_editor.rs  mod.rs
