[package]
name = "musix"
version = "0.1.0"
authors = ["Hjalte Nannestad <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "*"
log = "*"
simple_logger = "*"
serde = { version = "*", features = ["derive"] }
cpal = "*"
